# launcher

./: .gitignore  CMakeLists.txt
src/: main.c
src/app/: catalog.c  catalog.h  game.h
src/data/: db.c  db.h  game.sql  game_repo.c  game_repo.h  news.sql  stmt.c  stmt.h
src/models/: game.h
src/ui/: main_view.c  main_view.h  sidebar.c  sidebar.h  window.c  window.h
tests/: test_catalog.c
tests/data/: games.sample.ini
